removed overlap bug

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,7 +2,6 @@
 
 body
 {
-    background-color: darken($white, 2);
 
     main
     {
@@ -11,9 +10,8 @@ body
         background: url("/assets/img/corporate.jpg");
         background-size: cover;
         background-repeat: no-repeat;
-        position: absolute;
-        top: 0;
-        background-attachment: fixed;
+        position: relative;
+        top: -60px;
 
         & > .container
         {
@@ -42,15 +40,50 @@ body
                 opacity: 0;
                 animation: fadeIn 1s ease-in forwards;
                 animation-delay: 1.3s;
-                margin-top: 1%;
+                margin-top: 2%;
                 padding: 20px 40px;
             }
         }
     }
 
-    section
+    section:first-of-type
     {
+        position: absolute;
         width: 100%;
-        height: 200vh;
+        height: 80vh;
+        @extend .flex-column;
+
+
+        & .grid-container
+        {
+            width: 90%;
+            height: 90%;
+            @extend .grid-2;
+
+
+            .info
+            {
+                padding: 2%;
+
+                h4 
+                {
+                    font-size: 1.5rem;
+                    font-weight: lighter;
+                    margin-bottom: 2%;
+                }
+
+                p
+                {
+                    margin-top: 5%;
+                    margin-bottom: 5%;
+                    font-size: 13px;
+                    font-weight: 500;
+                    line-height: 2rem;
+                    width: 95%;
+                    opacity: 0.5;
+                }
+            }
+        }
     }
+
 }
